+ V8 + Recomendaciones de usuarios funcional.

--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -216,3 +216,13 @@ div#login h5
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus
   border-bottom: 1px solid $bluebuttons !important
   box-shadow: 0 1px 0 0 $bluebuttons !important
+.input-field .prefix.active
+  color: #64B5F6 !important
+label.active
+  color: #64B5F6 !important
+/* LOADER COLOR */
+
+.progress
+  background-color: white !important
+  .indeterminate
+    background-color: #64B5F6 !important
