--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -14,9 +14,10 @@
         <div class="row">
             <div class="col s12">
                 <div class="chips chips-placeholder"></div>
+                <p>Introduce una "," para añadir un nuevo interés.</p>
             </div>
         </div>
-        <div class="row">
+        <div     class="row">
             <div class="col s12">
                 <p class="flow-text">Los usuarios han mostrado interés por... </p>
                 {% for theme in top_tags %}
