--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -23,17 +23,17 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     <!-- si es usuario esta visitando un perfil que no es el suyo -->
                     <!-- Cambiamos el icono "+" por "reloj" mientras esperamos que acepte la peticion -->
                     <script type="text/javascript">
-$(window).load(function () {
-    var addFriend = document.getElementById('addfriend');
-    {% if isFriend == True %}
-    $(addFriend).replaceWith('<span class="fa fa-remove" id="addfriend" title="Dejar de seguir" style="color: #29b203;" onclick=AJAX_requestfriend("noabort");>' + ' ' + '</span>');
-    {% elif isBlocked == True %}
-    $(addFriend).replaceWith('<span class="fa fa-ban" id="bloq-user-span" title="Bloqueado" onclick="AJAX_remove_bloq();">' + ' ' + '</span>');
-    $('#bloq-user').css('color', '#FF6347');
-    {% elif existFollowRequest == True %}
-    $(addFriend).replaceWith('<span class="fa fa-clock-o" id="follow_request" title="En proceso" onclick=AJAX_remove_request_friend();>' + ' ' + '</div>');
-    {% endif %}
-});
+                        $(window).load(function () {
+                            var addFriend = document.getElementById('addfriend');
+                            {% if isFriend == True %}
+                            $(addFriend).replaceWith('<span class="fa fa-remove" id="addfriend" title="Dejar de seguir" style="color: #29b203;" onclick=AJAX_requestfriend("noabort");>' + ' ' + '</span>');
+                            {% elif isBlocked == True %}
+                            $(addFriend).replaceWith('<span class="fa fa-ban" id="bloq-user-span" title="Bloqueado" onclick="AJAX_remove_bloq();">' + ' ' + '</span>');
+                            $('#bloq-user').css('color', '#FF6347');
+                            {% elif existFollowRequest == True %}
+                            $(addFriend).replaceWith('<span class="fa fa-clock-o" id="follow_request" title="En proceso" onclick=AJAX_remove_request_friend();>' + ' ' + '</div>');
+                            {% endif %}
+                        });
                     </script>
                     {% endif %}
             </div>
@@ -42,7 +42,13 @@ $(window).load(function () {
             <div class="col l8 m12 s12 user-stats z-depth-1-half">
                 <div class="caja">
                     <div class="item">
-                        <div class="user-pic">{% avatar user_profile class="user-pic" %}</div>
+                        <div class="user-pic"
+                             style="{% if user_profile.profile.online %}-webkit-box-shadow: 0 0 10px 0 rgba(70, 241, 118, 0.75);
+                                 -moz-box-shadow: 0 0 10px 0 rgba(70, 241, 118, 0.75);
+                                 box-shadow: 0 0 10px 0 rgba(70, 241, 118, 0.75);{% else %}
+                                 -webkit-box-shadow: 0 0 10px 0 rgba(255, 99, 71, 0.75);
+                                 -moz-box-shadow: 0 0 10px 0 rgba(255, 99, 71, 0.75);
+                                 box-shadow: 0 0 10px 0 rgba(255, 99, 71, 0.75);{% endif %}">{% avatar user_profile class="user-pic" %}</div>
                         <div class="informacion">
                             {% if user.is_authenticated and user.username == user_profile.username %}
                             <!-- Si el usuario esta visitando su propio perfil -->
@@ -111,6 +117,7 @@ $(window).load(function () {
                     <h4 class="info-user-ciudad"><i class="fa fa-map-marker"></i>Mi ciudad</h4>
                     <h4 class="info-user-stats">Seguidores: {{ followers }}</h4>
                     <h4 class="info-user-stats">Seguidos: {{ following }} </h4>
+                    <h4 class="info-user-stats">Activo hace: {{ user_profile.profile.last_seen|timesince }}</h4>
                 </div>
                 <ul class="personal-card-controls">
                     {% if user.is_authenticated and user.username != user_profile.username %}
