--- a/notifications/templates/notifications/notice.html
+++ b/notifications/templates/notifications/notice.html
@@ -11,7 +11,7 @@
         <i class="fa fa-eye" aria-hidden="true"></i>
     </a>
     <h5>
-        {% if notice.unread %}<i class="fa fa-bell" aria-hidden="true"></i>{% endif %}
+        {% if notice.unread %}<i class="fa fa-bell" aria-hidden="true" title="Sin leer"></i>{% endif %}
         {% if not notice.level == "new_follow" %}<a href="/profile/{{ notice.actor }}">{{ notice.actor }}</a>{% endif %}
         <b>{{ notice.verb|safe }}</b>
         {% if notice.target %}
