--- a/skyfolk/templates/account/follow_entries.html
+++ b/skyfolk/templates/account/follow_entries.html
@@ -4,10 +4,10 @@
 
 {% paginate friends_top12 using "follow_entries" %}
 {% for item in friends_top12 %}
-    <li id="friend-{{ item.user__id }}">
-        <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
-        <a class="name" href="/profile/{{ item.user__username }}">{{ item.user__first_name }} {{ item.user__last_name }}
-            ({{ item.user__username }})</a>
+    <li id="friend-{{ item.user_id }}">
+        <div class="usr-img img-responsive">{% avatar item.title %}</div>
+        <a class="name" href="/profile/{{ item.title }}">{{ item.user__first_name }} {{ item.user__last_name }}
+            ({{ item.title }})</a>
     </li>
 {% endfor %}
 {% show_more %}
