--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -16,8 +16,8 @@
                         <i class="fa fa-heart fa-2x like-him">
                         </i>
                         <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.from_like__user__username }}'"
-                                 class="profile-user-bg">{% avatar item.from_like__user__username %}</div>
+                            <div onclick="location.href='/profile/{{ item.title }}'"
+                                 class="profile-user-bg">{% avatar item.title %}</div>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col s12">
                     <div class="name-friend">
-                        <a href="/profile/{{ item.from_like.user.username }}">@{{ item.from_like__user__username }} </a><br><br>
+                        <a href="/profile/{{ item.title }}">@{{ item.title }} </a><br><br>
                         <p>{{ item.from_like__user__first_name }} {{ item.from_like__user__last_name }}</p>
                     </div>
                 </div>
