--- a/skyfolk/templates/account/cf-blocked.html
+++ b/skyfolk/templates/account/cf-blocked.html
@@ -20,7 +20,7 @@
     <div class="col l12 m12 s12 wrapper-profilex">
         <ul>
             {% for item in blocked %}
-                <li class="bloq-user col l3 m12 s12" data-id="{{ item.user__profile__pk }}">
+                <li class="bloq-user col l3 m12 s12" data-id="{{ item.user_id }}">
                     <div class="col s12">
                         <div class="header">
                             {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
@@ -29,18 +29,18 @@
                                 <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                             {% endif %}
                             <div class="bg-user">
-                                <div onclick="location.href='/profile/{{ item.user__username }}'"
-                                     class="profile-user-bg">{% avatar item.user__username %}</div>
+                                <div onclick="location.href='/profile/{{ item.title }}'"
+                                     class="profile-user-bg">{% avatar item.title %}</div>
                             </div>
                         </div>
                     </div>
                     <div class="col s12">
                         <div class="name-friend">
-                            <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
+                            <a href="/profile/{{ item.title }}">@{{ item.title }} </a><br><br>
                             <p>{{ item.user__first_name }} {{ item.user__last_name }}</p>
                         </div>
                         <div class="col s12 unblock-user-div">
-                            <a class="waves-effect waves-light btn blue darken-1" data-id="{{ item.user__profile__pk }}"
+                            <a class="waves-effect waves-light btn blue darken-1" data-id="{{ item.user_id }}"
                                onclick="AJAX_remove_bloq_from_config(this)">Desbloquear</a>
                         </div>
                     </div>
