+ back_image en neo4j

--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -12,7 +12,7 @@
             {% else %}
                 <img class="background" src="{{ STATIC_URL }}dist/img/nuevo_back.png">
             {% endif %}
-            <a href="/profile/{{ request.user }}">{% avatar user 64 %}</a>
+            <a href="/profile/{{ request.user }}">{% avatar user %}</a>
             <a href="/profile/{{ request.user }}"><span class="white-text name">{{ request.user.username }}</span></a>
             <a><span class="white-text email">{{ request.user.first_name }}</span></a>
         </div>
