--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -91,8 +91,8 @@
                         {{ form.is_public.errors }}
                         <div class="input-field col s12">
                             <p>
-                                <input type="checkbox" id="id_is_public"/>
-                                <label for="id_is_public">{{ form_zip.is_public.help_text }}</label>
+                                {{ form.is_public }}
+                                <label for="id_is_public">{{ form.is_public.help_text }}</label>
                             </p>
                         </div>
                     </div>
@@ -138,18 +138,20 @@
                         </div>
                     </div>
                     <div class="row">
-                        {{ form_zip.is_public_collection.errors }}
-                        <p>
-                            {{ form_zip.is_public_collection }}
-                            <label for="id_is_public_collection">{{ form_zip.is_public_collection.help_text }}</label>
-                        </p>
-                    </div>
-                    <div class="row">
                         {{ form_zip.tags_collection.errors }}
                         <div class="input-field col s12">
                             <i class="material-icons prefix">label</i>
                             {{ form_zip.tags_collection }}
                             <label for="id_tags_collection">{{ form_zip.tags_collection.help_text }}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_zip.is_public_collection.errors }}
+                        <div class="input-field col s12">
+                            <p>
+                                {{ form_zip.is_public_collection }}
+                                <label for="id_is_public_collection">{{ form_zip.is_public_collection.help_text }}</label>
+                            </p>
                         </div>
                     </div>
                     <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
