--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -15,7 +15,7 @@ Menu de notificaciones verticales
     <ul id="list-notify" class="collection">
         {% if notifications %}
             {% for notification in notifications %}
-                <li class="collection-item avatar" data-id="notification.id">
+                <li class="collection-item avatar" data-id="{{ notification.id }}">
                     <a onclick="AJAX_mark_read(this)" class="fa fa-remove" id="mark-as-read-notification"
                        data-notification="{{ notification.slug }}"></a>
                     {% comment %}
@@ -34,14 +34,12 @@ Menu de notificaciones verticales
                         <div class="notification-buttons">
                             <button data-notification="{{ notification.slug }}"
                                     class="accept-response waves-effect waves-light btn white-text green"
-                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'accept', {{ notification.id }});
-                            AJAX_delete_notification({{ notification.slug }}, {{ notification.id }})">
+                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'accept', {{ notification.id }})">
                             <i class="material-icons">done</i>
                             </button>
                             <button data-notification="{{ notification.slug }}"
                                     class="rejected-response waves-effect waves-light btn white-text red"
-                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'rejected', {{ notification.id }});
-                            AJAX_delete_notification({{ notification.slug }}, {{ notification.id }})">
+                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'rejected', {{ notification.id }})">
                             <i class="material-icons">cancel</i>
                             </button>
                         </div>
