--- a/skyfolk/templates/account/reccomendation_after_login.html
+++ b/skyfolk/templates/account/reccomendation_after_login.html
@@ -12,34 +12,34 @@
         </div>
         <div class="row">
         {% if object_list %}
-            {% for user in object_list %}
+            {% for item in object_list %}
                 <div class="col s12 m12 l4">
                     <div class="card white">
                         <div class="card-content">
-                            {% avatar user.title 90 %}
+                            {% avatar item.title 90 %}
                             <span class="card-title grey-text darken-1">
-                                <a>{{ user.title }}</a>
+                                <a>{{ item.title }}</a>
                             </span>
                             <div class="divider"></div>
-                            <br> {% for tag in user.uid|get_tags %}
+                            <br> {% for tag in item.uid|get_tags %}
                             <div class="chip">{{ tag.title }}</div>
                         {% endfor %}
                         </div>
                         <div class="card-action">
-                            {% if request.user|is_blocked:user.user_id %}
-                                <button data-user-id="{{ user.user_id }}"
+                            {% if user.id|is_blocked:item.user_id %}
+                                <button data-user-id="{{ item.user_id }}"
                                         class="btn waves-effect waves-light blue darken-1 unblock-user" type="submit">
                                     Desbloquear
                                 </button>
-                            {% elif request.user|exist_request:user.user_id %}
-                                <button data-user-id="{{ user.user_id }}"
+                            {% elif user.id|exist_request:item.user_id %}
+                                <button data-user-id="{{ item.user_id }}"
                                         class="btn waves-effect waves-light blue darken-1 follow_request" type="submit">
                                     Solicitud enviada
                                 </button>
                             {% else %}
-                                <button data-user-id="{{ user.user_id }}"
+                                <button data-user-id="{{ item.user_id }}"
                                         class="btn waves-effect waves-light blue darken-1 follow-user" type="submit">
-                                    {% if request.user|is_follow:user.user_id %}Dejar de seguir {% else %}
+                                    {% if user.id|is_follow:item.user_id %}Dejar de seguir {% else %}
                                         Seguir{% endif %}</button>
                             {% endif %}
                         </div>
