--- a/postman/templates/postman/archives.html
+++ b/postman/templates/postman/archives.html
@@ -1,8 +1,8 @@
 {% extends "postman/base_folder.html" %}
 {% load i18n %}
-{% block pm_folder_title %}{% trans "Archived Messages" %}{% endblock %}
+{% block title %}<title>Skyfolk / {% trans "Archived Messages" %}</title>{% endblock %}
 {% block pm_archive_button %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
-{% block pm_footer_info %}
-<p>{% trans "Messages in this folder will never be removed. You can use this folder for long term storage." %}</p>
+{% block pm_footer_info %}<br>
+<p class="center flow-text">{% trans "Messages in this folder will never be removed. You can use this folder for long term storage." %}</p>
 {% endblock %}
