--- a/postman/templates/postman/view.html
+++ b/postman/templates/postman/view.html
@@ -1,36 +1,127 @@
 {% extends "postman/base.html" %}
-{% load i18n %}{% load postman_tags %}
+{% load i18n %}{% load postman_tags %}{% load avatar_tags %}
+{% block title %}<title>Skyfolk / {% if pm_messages|length > 1 %}{% trans "Conversation" %}{% else %}
+    {% trans "Message" %}{% endif %}</title>{% endblock %}
+{% block extra-css %}
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/mensajes_privados.css"/>
+{% endblock %}
 {% block content %}
-<div id="postman">
-<h1>{% if pm_messages|length > 1 %}{% trans "Conversation" %}{% else %}{% trans "Message" %}{% endif %}</h1>
-{% for message in pm_messages %}
-<div class="pm_message{% if message.is_pending %} pm_pending{% endif %}{% if message.is_rejected %} pm_rejected{% endif %}{% if message.sender == user and message.sender_archived or message.recipient == user and message.recipient_archived %} pm_archived{% endif %}{% if message.sender == user and message.sender_deleted_at or message.recipient == user and message.recipient_deleted_at %} pm_deleted{% endif %}{% if message.recipient == user and not message.read_at %} pm_unread{% endif %}">
- <div class="pm_header">
-  <span class="pm_sender">{{ message.obfuscated_sender|or_me:user }}</span> &raquo;
-  <span class="pm_recipient">{{ message.obfuscated_recipient|or_me:user }}</span> |
-  <span class="pm_date">{{ message.sent_at|date:"DATETIME_FORMAT"}}</span> |
-  <span class="pm_subject">{{ message.subject }}</span>
-{% if message.is_rejected %}  <div class="pm_status">{% trans "Rejected" %}{% if message.moderation_reason %}{% trans ":" %} {{ message.moderation_reason }}{% endif %}</div>{% endif %}
- </div>
- <div class="pm_body">{{ message.body|linebreaksbr }}</div>
-</div>
-{% if forloop.last %}
-<form action="" method="post">{% csrf_token %}
-<input type="hidden" {% if pm_messages|length > 1 and message.thread_id %}name="tpks" value="{{ message.thread_id }}"{% else %}name="pks" value="{{ message.pk }}"{% endif %} />
-<a href="{{ next_url }}">{% trans "Back" %}</a>
-<span id="pm_buttons">
-<button type="submit" onclick="this.form.action='{% url 'postman:delete' %}?next={{ next_url|urlencode }}'">{% trans "Delete" %}</button>
-{% if not archived %}<button type="submit" onclick="this.form.action='{% url 'postman:archive' %}?next={{ next_url|urlencode }}'">{% trans "Archive" %}</button>{% endif %}
+    <div class="container">
+        <div class="row">
+            {% block postman_menu %}
+                <div id="postman_menu" class="col l2 m12 s12 wrapper-config-menu">{% postman_unread as unread_count %}
+        <ul class="menu-config">
+            <li onclick="window.location.href='{% url 'postman:inbox' %}'">{% trans "Inbox" %}{% if unread_count %} <strong>({{ unread_count }})</strong>{% endif %}<i
+                    class="material-icons right">inbox</i></li>
+            <li onclick="window.location.href='{% url 'postman:write' %}'">{% trans "Write" %}<i
+                    class="material-icons right">create</i></li>
+            <li onclick="window.location.href='{% url 'postman:sent' %}'">{% trans "Sent Messages" %}<i class="material-icons right">forward</i>
+            </li>
+            <li onclick="window.location.href='{% url 'postman:trash' %}'">{% trans "Trash" %}<i class="material-icons right">delete</i></li>
+            <li onclick="window.location.href='{% url 'postman:archives' %}'">{% trans "Archives" %} <i class="material-icons right">folder_special</i></li>
+            <li class="blue lighten-5">Contactos ({{ friends_top12|length }})</li>
+            {% for item in friends_top12 %}
+                <li class="blue lighten-5" onclick="window.location.href='/messages/compose/{{ item.receiver__username }}'"><i
+                        class="material-icons right">account_circle</i>({{ item.receiver__username }})
+                </li>
+            {% endfor %}
+            <li class="blue lighten-5"><i class="material-icons right">group</i>Equipo desarrolladores</li>
+        </ul>
+    </div>
+            {% endblock %}
+            <div id="postman" class="col offset-l1 l8 m12 s12 body-wrapper">
+                {% for message in pm_messages %}
+                    <div class="row pm_message{% if message.is_pending %} pm_pending{% endif %}{% if message.is_rejected %} pm_rejected{% endif %}{% if message.sender == user and message.sender_archived or message.recipient == user and message.recipient_archived %} pm_archived{% endif %}{% if message.sender == user and message.sender_deleted_at or message.recipient == user and message.recipient_deleted_at %} pm_deleted{% endif %}{% if message.recipient == user and not message.read_at %} pm_unread{% endif %}">
+                        {% if message.sender == user %}
+                            <div class="col s12 m10 card z-depth-2 right">
+                                <div class="card-panel grey lighten-5 z-depth-1">
+                                    <div class="row valign-wrapper">
+                                        <div class="col s2">
+                                            <div class="chip">
+                                                {% avatar message.sender %}
+                                                <a class="pm_sender" href="/profile/{{ message.obfuscated_sender|or_me:user.id }}">{{ message.obfuscated_sender|or_me:user.id }}</a>
+                                            </div>
+                                            <br><br>
+                                            <blockquote class="pm_subject">{{ message.subject }}</blockquote>
+                                            <b class="time left pm_date">{{ message.sent_at|date:"DATETIME_FORMAT" }}</b>
+                                            {% if message.is_rejected %}
+                                            <div class="pm_status">
+                                            {% trans "Rejected" %}{% if message.moderation_reason %}{% trans ":" %}
+                                                {{ message.moderation_reason }}{% endif %}</div>{% endif %}
+                                            </div>
+                                        <div class="col s10">
+                                          <span class="black-text pm_body">
+                                              <p class="flow-text">{{ message.body|linebreaksbr }}</p>
+                                          </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div class="col s12 m10 card z-depth-2 left">
+                                <div class="card-panel grey lighten-5 z-depth-1">
+                                    <div class="row valign-wrapper">
+                                        <div class="col s2">
+                                            <div class="chip">
+                                                {% avatar message.sender %}
+                                                <a class="pm_sender" href="/profile/{{ message.obfuscated_sender|or_me:user.id }}">{{ message.obfuscated_sender|or_me:user.id }}</a>
+                                            </div>
+                                            <br><br>
+                                            <blockquote class="pm_subject">{{ message.subject }}</blockquote>
+                                            <b class="time left pm_date">{{ message.sent_at|date:"DATETIME_FORMAT" }}</b>
+                                            {% if message.is_rejected %}
+                                            <div class="pm_status">
+                                            {% trans "Rejected" %}{% if message.moderation_reason %}{% trans ":" %}
+                                                {{ message.moderation_reason }}{% endif %}</div>{% endif %}
+                                            </div>
+                                        <div class="col s10">
+                                          <span class="black-text pm_body">
+                                              <p class="flow-text">{{ message.body|linebreaksbr }}</p>
+                                          </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </div>
+                    {% if forloop.last %}
+                        <form action="" method="post" class="center">{% csrf_token %}
+                            <input type="hidden" {% if pm_messages|length > 1 and message.thread_id %}name="tpks"
+                                   value="{{ message.thread_id }}"{% else %}name="pks"
+                                   value="{{ message.pk }}"{% endif %}/>
+                            <a class="waves-effect waves-light btn blue darken-1" href="{{ next_url }}"><i class="material-icons left">arrow_back</i>{% trans "Back" %}</a>
+                            <span id="pm_buttons">
+                            <button class="waves-effect waves-light btn red" type="submit"
+                                    onclick="this.form.action='{% url 'postman:delete' %}?next={{ next_url|urlencode }}'">{% trans "Delete" %}</button>
+                                {% if not archived %}
+                                    <button class="waves-effect waves-light btn blue darken-1"  type="submit"
+                                            onclick="this.form.action='{% url 'postman:archive' %}?next={{ next_url|urlencode }}'">{% trans "Archive" %}</button>{% endif %}
 </span>
-{% if reply_to_pk %}<a href="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}">{% trans "Reply" %}</a>{% endif %}
-</form>
-{% if reply_to_pk %}<hr />
-<h2>{% trans 'Reply' %}</h2>
-<form action="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}" method="post">{% csrf_token %}
-<div id="pm_reply">{{ form.body }}</div>
-<button type="submit">{% trans 'Reply' %}</button>
-</form>{% endif %}
-{% endif %}
-{% endfor %}
-</div>
+                            {% if reply_to_pk %}
+                                <a class="waves-effect waves-light btn blue darken-1" href="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}"><i class="material-icons left">reply</i>{% trans "Reply" %}</a>{% endif %}
+                        </form>
+                        {% if reply_to_pk %}
+                            <div class="row">
+                                <div class="divider"></div>
+                                <form class="col offset-l1 l8 m12 s12"
+                                      action="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}"
+                                      method="post">{% csrf_token %}
+                                    <div id="pm_reply">
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                <textarea id="id_body" name="body" rows="12" cols="55"
+                                          class="materialize-textarea"></textarea>
+                                                <label for="id_body">{{ form.body.label }}</label>
+                                            </div>
+                                        </div>
+                                        <button class="waves-effect waves-light btn blue darken-1 right"
+                                                type="submit">{% trans 'Reply' %}</button>
+                                    </div>
+                                </form>
+                            </div>{% endif %}
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
