--- a/postman/templates/postman/write.html
+++ b/postman/templates/postman/write.html
@@ -1,3 +1,3 @@
 {% extends "postman/base_write.html" %}
 {% load i18n %}
-{% block pm_write_title %}{% trans "Write"%}{% endblock %}
+{% block title %}<title>Skyfolk / {% trans "Write" %}</title>{% endblock %}
