--- a/skyfolk/templates/account/pin-bottom.html
+++ b/skyfolk/templates/account/pin-bottom.html
@@ -1,6 +1,7 @@
 {% comment %}
   Pin de abajo (profile.html)
 {% endcomment %}
+{% comment %}
 <div class="video-player card">
     <div class="vbox">
         <div class="user-video">
@@ -63,4 +64,12 @@
             <button><span class="fa fa-desktop"></span></button>
         </li>
     </ul>
+</div>
+{% endcomment %}
+<div class="col s12">
+    <div class="card stock">
+        <video class="responsive-video" controls>
+            <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+        </video>
+    </div>
 </div>
