--- a/postman/templates/postman/base_write.html
+++ b/postman/templates/postman/base_write.html
@@ -26,8 +26,8 @@
             <li onclick="window.location.href='{% url 'postman:archives' %}'">{% trans "Archives" %} <i class="material-icons right">folder_special</i></li>
             <li class="blue lighten-5">Contactos ({{ friends_top12|length }})</li>
             {% for item in friends_top12 %}
-                <li class="blue lighten-5" onclick="window.location.href='/messages/compose/{{ item.receiver__username }}'"><i
-                        class="material-icons right">account_circle</i>({{ item.receiver__username }})
+                <li class="blue lighten-5" onclick="window.location.href='/messages/compose/{{ item.title }}'"><i
+                        class="material-icons right">account_circle</i>({{ item.title }})
                 </li>
             {% endfor %}
             <li class="blue lighten-5"><i class="material-icons right">group</i>Equipo desarrolladores</li>
