--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -26,7 +26,7 @@
                 <div class="col s12">
                     <div class="name-friend">
                         <a href="/profile/{{ item.title }}">@{{ item.title }} </a><br><br>
-                        <p>{{ item.from_like__user__first_name }} {{ item.from_like__user__last_name }}</p>
+                        <p>{{ item.first_name }} {{ item.last_name }}</p>
                     </div>
                 </div>
             </div>
